[package]
name = "bitvecbuf"
version = "1.0.0"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
description = "Rust BitBuffer implemented around BitVec"
license = "MIT"
repository = "https://github.com/WilliamVenner/bitvecbuf"

[dependencies]
bitvec = "0.22"

[features]
nightly = []